--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -1,16 +1,18 @@
 # This is a workflow to check the security issue in Node.js code
 
 name: "Node.js Vulnerabilities"
-on: 
-    schedule:
-            - cron: "0 0 * * *"
-    workflow_dispatch:
+on:
+  workflow_dispatch:
+  push:
+    paths:
+      - "**/*.js"
+
 jobs:
   is-my-node-vulnerable:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Check Node.js
-        uses: nodejs/is-my-node-vulnerable@v1
+        uses: nodejs/is-my-node-vulnerable@v1.6.1
         with:
           node-version: "18.14.1"
