--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
     "prettier": "prettier --check",
-    "start": "node server.js",
+    "start": "node app.js",
     "build": "echo 'No build step required'"
   },
   "author": "",
