--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
+    "ioredis": "^5.4.2",
     "mongoose": "^8.9.5",
     "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
