--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "ioredis": "^5.4.2",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
     "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
