add passport and passport-google-oauth20 dependencies to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ioredis": "^5.4.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
     "swagger-ui-express": "^5.0.1"
