--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
     "ioredis": "^5.4.2",
     "mongodb": "^6.13.0",
