--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^9.15.1",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.4.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
@@ -25,7 +31,8 @@
     "passport-google-oauth20": "^2.0.0",
     "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
