--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 5000",
     "lint": "eslint",
     "prettier": "prettier --check",
     "start": "node app.js",
@@ -25,20 +25,24 @@
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "chai": "^5.2.0",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "mocha": "^11.1.0",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0"
   }
